<?xml version="1.0"?>
<package format="2">
  <name>util_geo_coordinates_ros</name>
  <version>1.0.0</version>
  <description>Utils for conversion of geodetic (lat,lon) to Cartesian (x,y) coordinates</description>

  <license>BSD</license>
  <maintainer email="maximilian.naumann@kit.edu">Maximilian Naumann</maintainer>
  <author email="maximilian.naumann@kit.edu">Maximilian Naumann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>

  <depend>geodesy</depend>
  <depend>boost-python</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
